@@ -4,6 +4,7 @@
 	* !!! Moved Solr multicore configuration up one level, making it the default
 
 	* Changed solr.xml to only one core (english)
+	* Added ElisionFilterFactory infrench schema.xml
 
 2011-07-11  Ingo Renner  <ingo.renner@dkd.de>
 
